# slack_poll_app

./: .gitignore  Cargo.toml
migrations/2019-10-01-193030_slack_poll/: down.sql  up.sql
src/: actions_response.rs  application.rs  imports.rs  main.rs  poll_state.rs  schema.rs  slack_ui.rs  ui_poll_view.rs
src/data/: dialogs.rs  local_datasource.rs  mod.rs  polls.rs  users.rs  votes.rs
