[package]
name = "slack_dialog_app"
version = "0.1.0"
authors = ["vaiklol <samokatanet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slacker = { git="https://github.com/Vaiklol/slacker.git" }
tokio = "0.1.*"
actix-web = "1.0.7"
actix-files = "0.1.4"
actix-session = "0.2.0"
actix = "0.8.3"
actix-rt = "0.2"
env_logger = "0.6"
actix-http = "0.2.10"
serde = "1.*"
serde_json = "1.0.40"
dotenv = "0.14.1"
num_cpus = "1.0"

diesel = { version = "1.*", features = ["postgres", "r2d2", "chrono"] }
futures = "0.1.29"
chrono = { version = "0.4", features = ["serde"] }
